fix align

--- a/dev/css/fly-theme.css
+++ b/dev/css/fly-theme.css
@@ -52,6 +52,10 @@
     
 }
 
+.example-align > div > div {
+    border:1px solid #c3c3c3;
+}
+
 .example-text > div {
     margin-bottom: 5px;
 }
